# password_manager

./: .gitignore  bandit_report.txt  pyproject.toml  sonar-project.properties
.scannerwork/: report-task.txt
app/: __init__.py  app.py  config.py
app/models/: __init__.py  model_password.py  model_policy.py  model_user.py
app/routes/: __init__.py  route_hibp.py  route_password.py  route_policies.py  route_user.py  route_users.py
app/schemas/: __init__.py  schema_password.py  schema_policy.py  schema_user.py
app/services/: __init__.py  service_database.py  service_hibp.py  service_password.py
scripts/: dev.py
tests/: test_ihbp.py
