[project]
name = "password-manager"
version = "0.0.1"
description = "Software Security Final Assignment"
authors = [
    {name = "Sanjay Kumar Kumaravelan",email = "sanjaykumarcena@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-smorest (>=0.45.0,<0.46.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "scripts.dev:main"

[tool.poetry]
packages = [
    { include = "app" },
]